syntax = "proto3";
package Protocol;

enum PacketType
{
	None = 0;
	PKT_EnterChatRoomReq = 1001;
	PKT_EnterChatRoomAck = 1002;
}

message PacketHeader
{
	uint32 packetType = 1;
	uint32 packetSize = 2;
	uint32 seqNum = 3;
}

message EnterChatRoomReq
{
	PacketHeader header = 1;
	int32 message = 2;
	int32 value = 3;
}

message EnterChatRoomAck
{
	PacketHeader header = 1;
	uint32 id = 2;
}

message Packet
{
	PacketHeader header =1;

	oneof payload
	{
		EnterChatRoomReq chatroom_req = 2;
		EnterChatRoomAck chatroom_ack = 3;
	}
}